@@ -1,3 +1,9 @@
+2011-01-27  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* src/openpgp.c (cmd_reset_user_password): Added PINPAD_SUPPORT.
+
+	* src/gnuk.ld.in: Fix alignment and filling.
+
 2011-01-26  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* boards/STBEE/mcuconf.h: New.
